After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674086 - returned value of g_key_file_to_data() is leaked in nautilus-desktop-metadata.c's save_in_idle_cb()
returned value of g_key_file_to_data() is leaked in nautilus-desktop-metadata...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Metadata
0.x.x [obsolete]
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-14 01:55 UTC by Charles Kerr
Modified: 2012-04-18 21:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
two-liner to g_free() filename & contents (556 bytes, patch)
2012-04-14 02:05 UTC, Charles Kerr
committed Details | Review

Description Charles Kerr 2012-04-14 01:55:58 UTC
Summary says it all. The "contents" field in http://git.gnome.org/browse/nautilus/tree/libnautilus-private/nautilus-desktop-metadata.c#n54 is leaked.
Comment 1 Charles Kerr 2012-04-14 02:04:20 UTC
"filename" is also leaked in the same function.
Comment 2 Charles Kerr 2012-04-14 02:05:05 UTC
Created attachment 212030 [details] [review]
two-liner to g_free() filename & contents
Comment 3 Cosimo Cecchi 2012-04-14 16:19:35 UTC
Review of attachment 212030 [details] [review]:

Thanks, please push to the master and gnome-3-4 branches.
Comment 4 Cosimo Cecchi 2012-04-18 21:45:44 UTC
Pushed now.